# habit-tracker

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Makefile  README.md  bugs.md  docker-compose.dev.yml  docker-compose.yml  index.html  middleware.ts  package-lock.json  package.json  skills-lock.json  tsconfig.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_drop_archived_room_flags.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  errors.py
backend/app/api/routers/: admin.py  auth.py  avatars.py  export.py  habits.py  me.py  member_stats.py  rooms.py  stats.py
backend/app/api/schemas/: admin.py  auth.py  habits.py  rooms.py
backend/app/application/: habit_math.py
backend/app/application/use_cases/: auth.py  csv_io.py  entries.py  habits.py  rooms.py  stats.py  xlsx_reports.py
backend/app/domain/: errors.py
backend/app/domain/models/: entry.py  frequency.py  habit.py  score.py  streak.py
backend/app/domain/services/: entry_list.py  score_engine.py  statistics.py  streak_engine.py
backend/app/infrastructure/db/: base.py  tables.py
backend/app/infrastructure/repositories/: admin_repo.py  habit_repo.py  room_repo.py  token_repo.py  user_repo.py
backend/app/infrastructure/security/: jwt.py
backend/app/infrastructure/telegram/: bot_api.py  login_verifier.py  miniapp_verifier.py  oidc_verifier.py
backend/app/tests/: conftest.py
backend/app/tests/integration/: conftest.py  test_admin.py  test_auth.py  test_export.py  (+4 more)
backend/scripts/: seed.py
(+125 files in other folders)
